# faster-elevation

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: docker-image.yml
src/: main.rs
